# tangbuy-procurement-api

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_procurement_tables.py  002_catalog_tables.py  003_ops_tables.py  004_tangbuy_column_names.py  005_workflow_run.py
app/: main.py
docs/: alibaba-open-api.md  category-mapping-agent.md  command-center-action-playbook.md  config-center.md  data-integration.md  deploy-render.md  newton-cloud-api.md  tangbuy-field-mapping.md  workflow.md
scripts/: alibaba_open_cli.py  build-category-data.py  build-hs-authoritative.py  category_heuristics.py  category_mapper.py  db_init.py  dev-api.sh  dev.sh  e2e_admin_pipeline.sh  newton_cli.py  pending_conventions.py  requirements.txt  sync_admin_token_from_curl.py
tests/: test_admin_category_sync.py  test_admin_error_classify.py  test_admin_line_mapper.py  test_admin_writeback_dedup.py  test_agent_routing_image_url.py  test_background_jobs.py  test_board_signals.py  test_category_candidate_rank.py  test_evolution_phase3.py  test_history_conventions.py  test_mapping_quality.py  test_note_spec_dual_exit.py  test_order_note_classify.py  test_pending_conventions.py  test_platform_order_mapper.py  test_platform_order_sync.py  test_procurement_pipeline.py  test_procurement_place_order.py  test_procurement_release.py  test_purchase_cost_platform.py  test_quote_title.py  test_similar_enrich.py  test_snapshot_merge.py  test_sync_coordinator.py  test_workflow_aggregate.py  test_workflow_engine.py
(+184 files in other folders)
